<resources>
    <string name="app_name">RNetSpeed</string>

    <string-array name="net_monitor_state_entries">
        <item>仅下行</item>
        <item>上行和上行</item>
    </string-array>

    <string-array name="net_monitor_state_entry_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="netwindow_title">开启网速悬浮窗</string>
    <string name="window_opened">已开启</string>
    <string name="window_closed">已关闭</string>
    <string name="net_monitor_state">监控模式</string>
    <string name="font_color_title">字体颜色</string>
    <string name="font_size_title">字体大小</string>
    <string name="net_monitor_state_down_link">1</string>
    <string name="about_thanks">特别感谢</string>
    <string name="about_author">关于作者</string>
    <string name="abount_production">关于作品</string>
    <string name="about_author_text">Author:@Raven
        \nGithub地址:https://github.com/ravenxrz/RNetSpeed
        \n
        \n感谢以下开源库:
        \nSmartColorView:https://github.com/SmartCodeLab/SmartColorView
        \n
        \nJSpeedTest:https://github.com/bertrandmartel/speed-test-lib
        \n
        \nMPAndroidChart:https://github.com/PhilJay/MPAndroidChart
    </string>
    <string name="type_color_code_error">您输入的颜色代码有误，请重新输入</string>
    <string name="net_speed_test__bt_placeholder_text">开始</string>
    <string name="download_speed_test">下载网速测试</string>
    <string name="net_refresh_interval">网速刷新间隔</string>

</resources>
