<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="网速悬浮窗">
        <!-- 开关悬浮窗
              默认：关闭
         -->
        <SwitchPreference
            android:key="prf_window_state"
            android:title="@string/netwindow_title"
            android:summaryOn="@string/window_opened"
            android:summaryOff="@string/window_closed"
            android:defaultValue="false"
           />

        <EditTextPreference
            android:key="prf_refresh_interval"
            android:title="@string/net_refresh_interval"
            />
        <!-- 监控网络状态选择
             默认为：下行
         -->
        <ListPreference
            android:key="prf_monitor_state"
            android:title="@string/net_monitor_state"
            android:entries="@array/net_monitor_state_entries"
            android:entryValues="@array/net_monitor_state_entry_values"
            android:defaultValue="@string/net_monitor_state_down_link"
            />

        <com.raven.rnetspeed.views.FontColorChooseDialog
            android:dialogTitle=""
            android:dialogLayout="@layout/fontcolor_dialog_layout"
            android:key="prf_font_color"
            android:title="@string/font_color_title"
            />

        <com.raven.rnetspeed.views.FontSizeChooseDialog
            android:key="prf_font_size"
            android:title="@string/font_size_title"
            android:dialogLayout="@layout/fontsize_dialog_layout"
            android:negativeButtonText=""
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="扩展通能">
        <com.raven.rnetspeed.views.NetSpeedTestDialog
            android:key="net_speed_test"
            android:title="@string/download_speed_test"
            android:dialogLayout="@layout/net_speed_test_dialog"
            android:dialogTitle=""
            android:positiveButtonText=""
            android:negativeButtonText=""
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="其它">

        <com.raven.rnetspeed.views.AboutInfoDialog
            android:negativeButtonText=""
            android:dialogTitle=""
            android:title="@string/abount_production"
            android:key="about"
            android:dialogLayout="@layout/abount_dialog_layout"
            />
    </PreferenceCategory>

</PreferenceScreen>